Cleanup, AWS deploy, CORS configuration (#44)
* Revert "hash logic"

Hash already computes in a right way

This reverts commit 1e9e6e03e8ef94e6eb186aa211e26535c7dbc7a9.

* Revert "dev env"

It is not required to allow unathorized access to /api/v1/events

This reverts commit af774f1ac27859c9c673f4cd1473f4fb33c88286.

* Revert "fix 2"

revert cors filter confguration

This reverts commit dcc074b1dc008501cc1079aaef8d7bb6e24685e6.

* Revert "hot fix"

Incorrect filter order

This reverts commit 903da1b2ccc8a8ab554c9cc56cca00e80d426b87.

* Revert "annotation"

Incorrect filter order

This reverts commit 8084f7021b471a770579fb90433dd4c9e8d3a177.

* Revert "config"

Issuficient cors filter and unused logging dev mode

This reverts commit d02f1bec8a006e0a66e5ced4077d87b291759716.

* Revert "deploy to aws"

This reverts commit 2ebdc6102680c62d7498981cff7d4415c8372981.

* deploy aws build github workflow

* cors configuration