@@ -1,11 +1,14 @@
 package me.geohod.geohodbackend.configuration;
 
-import me.geohod.geohodbackend.configuration.properties.SecurityProperties;
 import me.geohod.geohodbackend.security.filter.TelegramInitDataAuthenticationFilter;
 import me.geohod.geohodbackend.security.provider.TelegramTokenAuthenticationProvider;
+
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.core.env.Environment;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.ProviderManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
@@ -18,31 +21,17 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
-
-import java.util.Arrays;
-import java.util.Collections;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfiguration {
     private final ProviderManager providerManager;
     private final TelegramTokenAuthenticationProvider telegramTokenAuthenticationProvider;
-    private final CorsFilter corsFilter;
-    private final Environment environment;
-    private final SecurityProperties securityProperties;
 
-    public SecurityConfiguration(TelegramTokenAuthenticationProvider telegramTokenAuthenticationProvider,
-                                CorsFilter corsFilter,
-                                Environment environment,
-                                SecurityProperties securityProperties) {
+    public SecurityConfiguration(TelegramTokenAuthenticationProvider telegramTokenAuthenticationProvider) {
         this.telegramTokenAuthenticationProvider = telegramTokenAuthenticationProvider;
-        this.corsFilter = corsFilter;
-        this.environment = environment;
-        this.securityProperties = securityProperties;
         this.providerManager = new ProviderManager(
-                telegramTokenAuthenticationProvider
-        );
+                telegramTokenAuthenticationProvider);
     }
 
     @Bean
@@ -55,12 +44,8 @@ public class SecurityConfiguration {
         return http
                 .csrf(AbstractHttpConfigurer::disable)
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .authorizeHttpRequests(authorize -> authorize
-                    .requestMatchers("/actuator/health").permitAll()
-                    .requestMatchers("/api/v1/events").permitAll()
-                    .anyRequest().fullyAuthenticated())
+                .authorizeHttpRequests(authorize -> authorize.anyRequest().fullyAuthenticated())
                 .authenticationProvider(telegramTokenAuthenticationProvider)
-                .addFilterBefore(corsFilter, UsernamePasswordAuthenticationFilter.class)
                 .addFilterBefore(loggingFilter(), UsernamePasswordAuthenticationFilter.class)
                 .addFilterBefore(tgInitDataAuthFilter(), UsernamePasswordAuthenticationFilter.class)
                 .sessionManagement(sessionConfigurer -> sessionConfigurer
@@ -71,17 +56,22 @@ public class SecurityConfiguration {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Collections.singletonList("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
-        configuration.setExposedHeaders(Collections.singletonList("x-auth-token"));
+        configuration.setAllowedOriginPatterns(List.of(
+                "https://client.geohod.ru",
+                "https://localhost:3000",
+                "https://127.0.0.1:3000"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PATCH", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Collections.singletonList("*"));
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
     private TelegramInitDataAuthenticationFilter tgInitDataAuthFilter() {
-        return new TelegramInitDataAuthenticationFilter(providerManager, environment, securityProperties);
+        return new TelegramInitDataAuthenticationFilter(providerManager);
     }
 
     private LoggingFilter loggingFilter() {
